--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,12 +11,12 @@
 </head>
 <body>
     <header>
-        <h1>The Tech Blog</h1>
+        <h1 class="text-center m-3">The Tech Blog</h1>
         <ul class="d-flex flex-row justify-content-around">
-            <li><a href="/">Home</a></li>
-            <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/signup">Signup</a></li>
+            <li class="text-white bg-primary p-3 rounded"><a href="/">Home</a></li>
+            <li class="text-white bg-primary p-3 rounded"><a href="/dashboard">Dashboard</a></li>
+            <li class="text-white bg-primary p-3 rounded"><a href="/login">Login</a></li>
+            <li class="text-white bg-primary p-3 rounded"><a href="/signup">Signup</a></li>
         </ul>
     </header>
     <main>
