--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -9,7 +9,7 @@
           </div>
           <div>
             <label for="password-input-signup" class="form-label">Password</label>
-            <input type="password" id="password-input-singup" />
+            <input type="password" id="password-input-signup" />
           </div>
           <button type="submit" id="signup-btn" class="btn col-2 text-white bg-success p-3 rounded m-3">Sign Up!</button>
           <a type="button" class="btn col-2 text-white bg-primary p-3 rounded m-3" href="/login">Log In Instead</a>
