--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -10,13 +10,12 @@
     <link rel="stylesheet" href="../../public/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>The Tech Blog</h1>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/logout">Logout</a></li>
-            <li><a href="/signup">Signup</a></li>
+        <h1 class="text-center m-3">The Tech Blog</h1>
+        <ul class="d-flex flex-row justify-content-around">
+            <li class="text-white bg-primary p-3 rounded"><a href="/">Home</a></li>
+            <li class="text-white bg-primary p-3 rounded"><a href="/dashboard">Dashboard</a></li>
+            <li class="text-white bg-primary p-3 rounded"><a href="/logout">Logout</a></li>
+            <li class="text-white bg-primary p-3 rounded"><a href="/signup">Signup</a></li>
         </ul>
     </header>
     <main>
