--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheTechBlog</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../public/css/reset.css">
-    <link rel="stylesheet" href="../../public/css/style.css">
+    {{!-- <link rel="stylesheet" href="../../public/css/reset.css">
+    <link rel="stylesheet" href="../../public/css/style.css"> --}}
 </head>
 <body>
+    <header>
         <h1 class="text-center m-3">The Tech Blog</h1>
         <ul class="d-flex flex-row justify-content-around">
             <li class="text-white bg-primary p-3 rounded"><a href="/">Home</a></li>
