--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,26 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TheTechBlog</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-    {{!-- <link rel="stylesheet" href="../../public/css/reset.css">
-    <link rel="stylesheet" href="../../public/css/style.css"> --}}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tech Blog</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <header>
-        <h1 class="text-center m-3">The Tech Blog</h1>
-        <ul class="d-flex flex-row justify-content-around">
-            <li class="text-white bg-primary p-3 rounded"><a href="/">Home</a></li>
-            <li class="text-white bg-primary p-3 rounded"><a href="/dashboard">Dashboard</a></li>
-            <li class="text-white bg-primary p-3 rounded"><a href="/login">Login</a></li>
-            <li class="text-white bg-primary p-3 rounded"><a href="/signup">Signup</a></li>
-        </ul>
-    </header>
-    <main>
-        {{{ body }}}
-    </main>
+  <header>
+    <h1>
+      The Tech Blog
+    </h1>
+
+    <nav>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/api/dashboard">Dashboard</a></li>
+          {{#if logged_in}}
+            <li><a class="btn-secondary" id="logout">Logout</a></li>
+          {{else}}
+            <li><a href="/login" class="btn-primary" id="login">Login</a></li>
+          {{/if}}
+          </ul>
+    </nav>
+  </header>
+  <main>
+    {{#if logged_in}}
+      <p class="username">
+        Logged in as <strong>{{username}}</strong>
+      </p>
+    {{/if}}
+    {{{ body }}}
+  </main>
+  <footer>
+      The Tech Blog 2022
+  </footer>
+
+
+  {{#if logged_in}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
 </body>
+
 </html>
