--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
-<section>
+<section class="post-display d-flex flex-column text-center p-4">
   {{#each posts as |post| }}
-    <article>
+    <article class="post-card p-4">
       <div class="post-header">
         <h2>
           <a href="/api/posts/{{post.id}}">{{post.title}}</a>
