--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
 
   <main>
     {{#if logged_in}}
-      <p class="username text-center">
+      <p class="username text-center m-4">
         Logged in as <strong>{{username}}</strong>
       </p>
     {{/if}}
